-- migrate:up
CREATE TABLE documents (
  id INT UNSIGNED NOT NULL AUTO_INCREMENT,
  folder_id INT UNSIGNED NOT NULL,
  title VARCHAR(100) NOT NULL,
  autogenerated_title TEXT,
  url VARCHAR(255) NOT NULL,
  uploaded_by INT UNSIGNED NOT NULL,
  created DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  PRIMARY KEY (id),
  KEY idx_documents_folder_id (folder_id),
  KEY idx_documents_uploaded_by (uploaded_by),
  CONSTRAINT fk_documents_folder
    FOREIGN KEY (folder_id) REFERENCES folders(id)
    ON DELETE CASCADE,
  CONSTRAINT fk_documents_uploaded_by
    FOREIGN KEY (uploaded_by) REFERENCES workers(id)
    ON DELETE RESTRICT
);

-- migrate:down
DROP TABLE IF EXISTS documents;