@startuml
left to right direction

' -------------------------
' Entidades principales
' -------------------------
entity sexs {
  * id : INT <<PK>>
  --
  name : VARCHAR(45)
}

entity departments {
  * id : INT <<PK>>
  --
  name : VARCHAR(45)
}

entity provinces {
  * id : INT <<PK>>
  --
  name : VARCHAR(45)
  department_id : INT <<FK>>
}

entity districts {
  * id : INT <<PK>>
  --
  name : VARCHAR(45)
  province_id : INT <<FK>>
}

entity document_types {
  * id : INT <<PK>>
  --
  name : VARCHAR(20)
}

entity representative_roles {
  * id : INT <<PK>>
  --
  name : VARCHAR(20)
}

entity persons {
  * id : INT <<PK>>
  --
  names : VARCHAR(45)
  lastNames : VARCHAR(45)
  documentNumber : VARCHAR(12)
  imageUrl: VARCHAR(70)
  birthDate : DATE
  created : DATETIME
  updated : DATETIME
  sex_id: INT
  document_type_id: INT
}

entity workers {
  * id : INT <<PK>>
  --
  code: INT
  bio: TEXT
  person_id : INT <<FK>>
  email: VARCHAR(100)
  user_id: INT
}

entity representatives {
  * id : INT <<PK>>
  --
  email: VARCHAR(100)
  user_id: INT
  person_id : INT <<FK>>
}

entity students {
  * id : INT <<PK>>
  --
  code: INT
  email: VARCHAR(100)
  user_id: INT
  person_id : INT <<FK>>
}

entity addresses {
  * id : INT <<PK>>
  --
  person_id : INT <<FK>>
  description : VARCHAR(40)
  address : VARCHAR(255)
}

entity phones {
  * id : INT <<PK>>
  --
  person_id : INT <<FK>>
  description : VARCHAR(40)
  phone : VARCHAR(20)
}

entity representatites_students_roles {
  * id : INT <<PK>>
  --
  representative_id : INT <<FK>>
  student_id : INT <<FK>>
  representative_role_id : INT <<FK>>
  created: DATETIME
  updated: DATETIME
}

entity worker_roles {
  * id : INT <<PK>>
  --
  name : VARCHAR(20)
}

entity levels {
  * id : INT <<PK>>
  --
  name : VARCHAR(30)
}

entity courses {
  * id : INT <<PK>>
  --
  name : VARCHAR(45)
  code: VARCHAR(10)
  description : TEXT
  sylabus_url: VARCHAR(100)
  level_id: INT <<FK>>
  worker_id: INT <<FK>>
}

entity sections {
  * id : INT <<PK>>
  --
  name : VARCHAR(45)
  description : TEXT
  image_url: VARCHAR(100)
  course_id: INT <<FK>>
}

entity sections_workers_roles {
  * id : INT <<PK>>
  --
  section_id : INT <<FK>>
  worker_id : INT <<FK>>
  worker_role_id : INT <<FK>>
}

entity sections_students {
  * id : INT <<PK>>
  --
  section_id : INT <<FK>>
  student_id : INT <<FK>>
}

entity adverts {
  * id : INT <<PK>>
  --
  header : VARCHAR(45)
  description : TEXT
  created: DATETIME
  updated: DATETIME
  published_from: DATETIME
  published_to: DATETIME
  section_id: INT <<FK>>
  worker_id: INT <<FK>>
}

entity folders {
  + id : INT <<PK>>
  --
  parent_id : INT <<FK, nullable>>
  title : VARCHAR(100)
  description : TEXT
  created : DATETIME
  updated : DATETIME
}

entity folder_common_materials {
  + id : INT <<PK, FK>>
  --
  course_id : INT <<FK>>
}

entity folder_seccion_materiales {
  + id : INT <<PK, FK>>
  --
  section_id : INT <<FK>>
}

entity documents {
  + id : INT <<PK>>
  --
  folder_id : INT <<FK>>
  title : VARCHAR(100)
  autogenerated_title : TEXT
  url : VARCHAR(255)
  uploaded_by : INT <<FK>>
  created : DATETIME
  updated : DATETIME
}

entity evaluation_types {
  * id : INT <<PK>>
  --
  name : VARCHAR(50)
  icon : VARCHAR(15)
}

entity section_evaluations {
  * id : INT <<PK>>
  --
  section_id : INT <<FK>>
  worker_id : INT <<FK>>
  evaluation_type_id : INT <<FK>>
  title : VARCHAR(100)
  description : TEXT
  published_from: DATETIME
  published_to: DATETIME
  created : DATETIME
  updated : DATETIME
}

entity material_documents {
  * id : INT <<PK>>
  --
  material_id : INT <<FK>>
  document_id : INT <<FK>>
}

entity evaluation_documents {
  * id : INT <<PK>>
  --
  section_evaluation_id : INT <<FK>>
  document_id : INT <<FK>>
}

entity section_evaluation_grades {
  * id : INT <<PK>>
  --
  section_evaluation_id : INT <<FK>>
  student_id : INT <<FK>>
  grade : DECIMAL(5,2)
  feedback : TEXT
  created : DATETIME
  updated : DATETIME
}

entity section_evaluation_submissions {
  * id : INT <<PK>>
  --
  section_evaluation_id : INT <<FK>>
  student_id : INT <<FK>>
  created : DATETIME
  updated : DATETIME
}

entity submission_documents {
  * id : INT <<PK>>
  --
  comment: TEXT
  submission_id : INT <<FK>>
  document_id : INT <<FK>>
}

' -------------------------
' Relaciones existentes
' -------------------------
sexs   ||--o{ persons : has

document_types   ||--o{ persons : has

persons ||--o{ addresses : has
persons ||--o{ phones : has
persons ||--|| workers : is_a
persons ||--|| students : is_a
persons ||--|| representatives : is_a

departments ||--o{ provinces : has
provinces   ||--o{ districts : has

districts ||--o{ addresses : live

representatives ||--o{ representatites_students_roles : has
representative_roles ||--o{ representatites_students_roles : has
students ||--o{ representatites_students_roles : has

' -------------------------
' Nuevas relaciones añadidas
' -------------------------

levels ||--o{ courses : has
courses ||--o{ sections : has
workers ||--o{ courses : has

sections ||--o{ sections_workers_roles : has
workers  ||--o{ sections_workers_roles : has
worker_roles ||--o{ sections_workers_roles : has

sections ||--o{ sections_students : has
students ||--o{ sections_students : has

sections ||--o{ adverts : has
workers ||--o{ adverts : has

courses ||--o{ folders : contains
sections ||--o{ folders : contains

workers ||--o{ section_evaluations : creates
sections ||--o{ section_evaluations : receives
evaluation_types ||--o{ section_evaluations : categorizes

persons ||--o{ documents : uploads

section_evaluations ||--o{ evaluation_documents : contains
documents ||--o{ evaluation_documents : belongs_to

section_evaluations ||--o{ section_evaluation_grades : contains
students ||--o{ section_evaluation_grades : receives

section_evaluations ||--o{ section_evaluation_submissions : receives
students ||--o{ section_evaluation_submissions : submits

section_evaluation_submissions ||--o{ submission_documents : contains
documents ||--o{ submission_documents : belongs_to

' -------------------------
' Relaciones añadidas
' -------------------------

folders ||--o{ folders : parent_id
folders ||--o{ documents : contains
folder_common_materials -|> folders
folder_seccion_materiales -|> folders
folder_common_materials }o--|| courses : belongs_to
folder_seccion_materiales }o--|| sections : belongs_to

@enduml
